SUBDIRS = CBGPValid tests

EXTRA_DIST= \
	cbgp-validation.pl \
	CBGP.pm \
	valid-record-route.ntf \
	simple-rib.ascii \
	abilene-rib.ascii \
	abilene-rib.marco \
	valid-bgp-topology.subramanian \
	as-level-inconsistent.txt \
	as-level-cycle.txt \
	as-level-disconnected.txt \
	as-level-topo-small.txt \
	valid-net-tm.tm \
	valid-net-tm-missing-field.tm \
	valid-net-tm-number-fields.tm \
	valid-net-tm-invalid-field.tm \
	valid-net-tm-dst-pfx.tm \
	valid-net-tm-src-asn.tm

#	abilene/ATLA/rib.20050801.0124-ebgp.ascii \
#	abilene/CHIN/rib.20050801.0017-ebgp.ascii \
#	abilene/DNVR/rib.20050801.0014-ebgp.ascii \
#	abilene/HSTN/rib.20050801.0149-ebgp.ascii \
#	abilene/IPLS/rib.20050801.0157-ebgp.ascii \
#	abilene/KSCY/rib.20050801.0154-ebgp.ascii \
#	abilene/LOSA/rib.20050801.0034-ebgp.ascii \
#	abilene/NYCM/rib.20050801.0050-ebgp.ascii \
#	abilene/SNVA/rib.20050801.0118-ebgp.ascii \
#	abilene/STTL/rib.20050801.0124-ebgp.ascii \
#	abilene/WASH/rib.20050801.0101-ebgp.ascii
