AM_CFLAGS = $(OPT_EXPERIMENTAL) -I../..

noinst_LTLIBRARIES = libjni_impl.la
libjni_impl_la_CFLAGS = $(LIBGDS_CFLAGS)

libjni_impl_la_SOURCES = \
	net_IPTrace.c \
	net_IPTrace.h \
	net_Link.c \
	net_Link.h \
	net_Node.c \
	net_Node.h \
	net_Subnet.c \
	net_Subnet.h \
	net_IGPDomain.c \
	net_IGPDomain.h \
	bgp_Domain.c \
	bgp_Domain.h \
	bgp_Filter.c \
	bgp_Filter.h \
	bgp_FilterRule.c \
	bgp_FilterRule.h \
	bgp_Peer.c \
	bgp_Peer.h \
	bgp_Router.c \
	bgp_Router.h

